[gd_scene load_steps=11 format=3 uid="uid://dmbqul4rm3vvb"]

[ext_resource type="Theme" uid="uid://cm2fomdb61et5" path="res://themes/custom_theme.tres" id="1_h81gt"]
[ext_resource type="Texture2D" uid="uid://b2ro32smbm8p3" path="res://art/ui/tiles/tile_0001.png" id="1_jlhys"]
[ext_resource type="Texture2D" uid="uid://bptu4oq6qbxtd" path="res://art/snapshots/TwoHeroes.png" id="2_hnicy"]
[ext_resource type="Script" uid="uid://bbh2btj52qph7" path="res://scripts/ui/menues/tutorial_ui.gd" id="2_lguia"]
[ext_resource type="Script" uid="uid://6aelr2g0dpvu" path="res://scripts/ui/generic/custom_button.gd" id="4_vw6fe"]
[ext_resource type="Texture2D" uid="uid://2wv4uwovad5l" path="res://art/snapshots/SynergyBar.png" id="5_bbjmu"]
[ext_resource type="Texture2D" uid="uid://cv44kmslfuq0u" path="res://art/snapshots/SynergyActivated.png" id="6_vw6fe"]
[ext_resource type="Texture2D" uid="uid://dntaxok1nsh8k" path="res://art/snapshots/MinerDeath.png" id="7_ryxqm"]
[ext_resource type="Texture2D" uid="uid://b3x0182uqnywi" path="res://art/snapshots/WarriorScreenDeath.png" id="8_s6l8d"]
[ext_resource type="Texture2D" uid="uid://dfdefiiihakx7" path="res://art/snapshots/SpeedBoost.png" id="9_1hq7j"]

[node name="Tutorial" type="Control" node_paths=PackedStringArray("_slides_container", "_previous_slide_button", "_next_slide_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_h81gt")
script = ExtResource("2_lguia")
_slides_container = NodePath("Slides/SlidesContainer")
_previous_slide_button = NodePath("Buttons/ButtonsContainer/PreviousSlideButton")
_next_slide_button = NodePath("Buttons/ButtonsContainer/NextSlideButton")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jlhys")
patch_margin_left = 10
patch_margin_top = 7
patch_margin_right = 9
patch_margin_bottom = 8

[node name="Slides" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SlidesContainer" type="MarginContainer" parent="Slides"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="SlideHeroSelection" type="Control" parent="Slides/SlidesContainer"]
visible = false
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Slides/SlidesContainer/SlideHeroSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Images" type="HBoxContainer" parent="Slides/SlidesContainer/SlideHeroSelection/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="Slides/SlidesContainer/SlideHeroSelection/Content/Images"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_hnicy")
expand_mode = 1
stretch_mode = 5

[node name="Image2" type="TextureRect" parent="Slides/SlidesContainer/SlideHeroSelection/Content/Images"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_hnicy")
expand_mode = 1
stretch_mode = 5

[node name="Text" type="VBoxContainer" parent="Slides/SlidesContainer/SlideHeroSelection/Content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="RTL - Tips" type="RichTextLabel" parent="Slides/SlidesContainer/SlideHeroSelection/Content/Text"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Mi fuente no soporta negrita o cursiva, solo subrayado y color (creo que es default en godot)
[b]negrita[/b]
[i]cursiva[/i]
[u]subrayado[/u]
[color=red]rojo[/color] (se puede hex tmb: hex: #ffcc00)"

[node name="1" type="RichTextLabel" parent="Slides/SlidesContainer/SlideHeroSelection/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- You have two Heroes, the [color=blue]Miner[/color] and the [color=red]Warrior[/color]. They both move in a straight line and attack automatically."
fit_content = true

[node name="2" type="RichTextLabel" parent="Slides/SlidesContainer/SlideHeroSelection/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- You can only control one at a time. When you control a Hero you can move them horizontally with the \"A\" and \"D\" keys. The selected Hero also gains attack speed."
fit_content = true

[node name="3" type="RichTextLabel" parent="Slides/SlidesContainer/SlideHeroSelection/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- You can [color=\"yellow\"]Swap[/color] the selection of the Heroes by pressing \"Spacebar\""
fit_content = true

[node name="SlideSpeedBoost" type="Control" parent="Slides/SlidesContainer"]
visible = false
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Slides/SlidesContainer/SlideSpeedBoost"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Images" type="HBoxContainer" parent="Slides/SlidesContainer/SlideSpeedBoost/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="Slides/SlidesContainer/SlideSpeedBoost/Content/Images"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("9_1hq7j")
expand_mode = 1
stretch_mode = 5

[node name="Text" type="VBoxContainer" parent="Slides/SlidesContainer/SlideSpeedBoost/Content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="RTL - Tips" type="RichTextLabel" parent="Slides/SlidesContainer/SlideSpeedBoost/Content/Text"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Mi fuente no soporta negrita o cursiva, solo subrayado y color (creo que es default en godot)
[b]negrita[/b]
[i]cursiva[/i]
[u]subrayado[/u]
[color=red]rojo[/color] (se puede hex tmb: hex: #ffcc00)"

[node name="1" type="RichTextLabel" parent="Slides/SlidesContainer/SlideSpeedBoost/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- Destroying [color=\"green\"]collectables[/color] (enemies minerals) will grant you [color=blue]Vertical speed boost[/color] temporarily."
fit_content = true

[node name="2" type="RichTextLabel" parent="Slides/SlidesContainer/SlideSpeedBoost/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- Some collectables give a lot of speed boost time, others give none."
fit_content = true

[node name="SlideSynergy" type="Control" parent="Slides/SlidesContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Slides/SlidesContainer/SlideSynergy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Images" type="HBoxContainer" parent="Slides/SlidesContainer/SlideSynergy/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="Slides/SlidesContainer/SlideSynergy/Content/Images"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("5_bbjmu")
expand_mode = 1
stretch_mode = 5

[node name="Image2" type="TextureRect" parent="Slides/SlidesContainer/SlideSynergy/Content/Images"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_vw6fe")
expand_mode = 1
stretch_mode = 5

[node name="Text" type="VBoxContainer" parent="Slides/SlidesContainer/SlideSynergy/Content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="RTL - Tips" type="RichTextLabel" parent="Slides/SlidesContainer/SlideSynergy/Content/Text"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Mi fuente no soporta negrita o cursiva, solo subrayado y color (creo que es default en godot)
[b]negrita[/b]
[i]cursiva[/i]
[u]subrayado[/u]
[color=red]rojo[/color] (se puede hex tmb: hex: #ffcc00)"

[node name="1" type="RichTextLabel" parent="Slides/SlidesContainer/SlideSynergy/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- Gathering minerals, killing enemies, swapping and other events will charge your [color=violet]Synergy Bar[/color]."
fit_content = true

[node name="2" type="RichTextLabel" parent="Slides/SlidesContainer/SlideSynergy/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- When the bar is fully charged you'll be able to control both Heroes simultaneously, the Miner with \"A\" and \"D\" and the Warrior with the arrow keys \"<-\" and \"->\""
fit_content = true

[node name="SlideDefeatReasons" type="Control" parent="Slides/SlidesContainer"]
visible = false
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Slides/SlidesContainer/SlideDefeatReasons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Images" type="HBoxContainer" parent="Slides/SlidesContainer/SlideDefeatReasons/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="Slides/SlidesContainer/SlideDefeatReasons/Content/Images"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("7_ryxqm")
expand_mode = 1
stretch_mode = 5

[node name="Image2" type="TextureRect" parent="Slides/SlidesContainer/SlideDefeatReasons/Content/Images"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("8_s6l8d")
expand_mode = 1
stretch_mode = 5

[node name="Text" type="VBoxContainer" parent="Slides/SlidesContainer/SlideDefeatReasons/Content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="RTL - Tips" type="RichTextLabel" parent="Slides/SlidesContainer/SlideDefeatReasons/Content/Text"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Mi fuente no soporta negrita o cursiva, solo subrayado y color (creo que es default en godot)
[b]negrita[/b]
[i]cursiva[/i]
[u]subrayado[/u]
[color=red]rojo[/color] (se puede hex tmb: hex: #ffcc00)"

[node name="1" type="RichTextLabel" parent="Slides/SlidesContainer/SlideDefeatReasons/Content/Text"]
layout_mode = 2
bbcode_enabled = true
text = "- You [color=red]Lose[/color] when a Hero's HP is depleated or when they touch the bottom of the screen."
fit_content = true

[node name="Buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -372.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="ButtonsContainer" type="HBoxContainer" parent="Buttons"]
layout_mode = 2
alignment = 2

[node name="PreviousSlideButton" type="Button" parent="Buttons/ButtonsContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
text = "Previous Slide"
script = ExtResource("4_vw6fe")

[node name="NextSlideButton" type="Button" parent="Buttons/ButtonsContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
text = "Next Slide"
script = ExtResource("4_vw6fe")

[node name="CloseButton" type="Button" parent="Buttons/ButtonsContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
text = "Close Tutorial"
script = ExtResource("4_vw6fe")

[connection signal="pressed" from="Buttons/ButtonsContainer/PreviousSlideButton" to="." method="_on_previous_slide_button_pressed"]
[connection signal="pressed" from="Buttons/ButtonsContainer/NextSlideButton" to="." method="_on_next_slide_button_pressed"]
[connection signal="pressed" from="Buttons/ButtonsContainer/CloseButton" to="." method="_on_close_button_pressed"]
